# rust-docker

./: .gitignore
api/: Cargo.toml  Dockerfile.dev  docker-entrypoint-dev.sh
api/src/: main.rs
api/src/handlers/: mod.rs
client/: Cargo.toml  Dockerfile.dev  docker-entrypoint-dev.sh  index.html
client/src/: form.rs  main.rs
client/src/assets/: style.css
client/src/components/: mod.rs
db/: Dockerfile.dev
gateway/config/dev/: default.conf
scripts_docker_dev/: docker-compose.dev.yml
