[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
axum = "0.6.20"
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["full"] }
dotenv = "0.15.0"
sqlx = { version = "0.7.2", features = [
  "runtime-tokio-rustls",
  "json",
  "postgres",
  "macros",
] }
serde = "1.0.192"
serde_json = "1.0.108"
