[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
yew = { version = "0.21.0", features = ["csr"] }
serde = "1.0.192"
wasm-bindgen-futures = "0.4.38"
web-sys = { version = "0.3.65", features = ["HtmlInputElement"] }
gloo-console = "0.3.0"
